--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,6 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-
+	// https://mvnrepository.com/artifact/com.google.guava/guava
+	compile 'com.google.guava:guava:28.0-jre'
 }
